--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -50,7 +50,7 @@ jobs:
       which python && \
       env && \
       cd $CONDA_PREFIX && \
-      find type_traits\*
+      find . -name type_traits\*
     displayName: 'Conda env sanity checks'
 
   - bash: |
