--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -99,7 +99,8 @@ jobs:
   - ${{ if contains(parameters.vmImage, 'mac') }}:
     - bash: |
         source activate cpp-py-bindgen && \
-        cp -rf opencascade $CONDA_PREFIX/inlcude && \
+        cp -rf opencascade $CONDA_PREFIX/include && \
+        cat $CONDA_PREFIX/include/opencascade/OpenGl_HaltonSampler.hxx  &&\
         cmake -B build -S "$(conf.OUTPUT)" -G Ninja -DCMAKE_BUILD_TYPE=Release && \
         cmake --build build -j $(n_cores) -- -k 0 && \
         rm -rf build/CMakeFiles
