--- a/ocp.toml
+++ b/ocp.toml
@@ -555,6 +555,7 @@ parsing_header = '''#include <Standard_Handle.hxx>
 
         include_header_pre = """#include <Message_Messenger.hxx>
 struct NSOpenGLContext {};"""
+        include_body_pre = 'py::class_<NSOpenGLContext>(m, "NSOpenGLContext");'
         exclude_methods = ["OpenGl_GlCore11::glGetPointerv","OpenGl_RaytraceGeometry::Clear",
                            "OpenGl_View::ChangeGraduatedTrihedron","OpenGl_View::LayerList"]
         exclude_typedefs = ["OpenGl_SequenceOfLayers","OpenGl_SetterList","OpenGl_MapOfHatchStylesAndIds","OpenGl_MapOfZLayerSettings","OpenGl_IndexedMapOfStructure","OpenGl_MapOfShaderPrograms","OpenGl_IndexedMapOfStructure","OpenGl_LayerSeqIds"]
