--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -9,17 +9,13 @@ parameters:
   CXX: g++-8
 
 jobs:
-- job: ${{ parameters.name }}_${{ parameters.py_maj }}_${{ parameters.py_min }}
+- job: ${{ parameters.name }}_${{ parameters.vmImage }}
   timeoutInMinutes: 360
-
   pool:
     vmImage: ${{ parameters.vmImage }}
-
   variables:
     n_cores: 2
-
   steps:
-
   - ${{ if contains(parameters.vmImage, 'Ubuntu') }}:
     - bash: sudo apt-get install ${{ parameters.CXX }} mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
       displayName: 'Install g++8 and gl headers'
@@ -85,11 +81,65 @@ jobs:
       pathtoPublish: $(conf.OUTPUT)
       artifactName: OCP_src_${{ parameters.vmImage }}
     displayName: 'Publish resulting code'
+    
+  - publish:  $(conf.OUTPUT)
+    artifact: OCP_src_${{ parameters.vmImage }}
+    
+- job: ${{ parameters.name }}_${{ parameters.py_maj }}_${{ parameters.py_min }}
+  timeoutInMinutes: 360
+  dependsOn: ${{ parameters.name }} 
+  pool:
+    vmImage: ${{ parameters.vmImage }}
+  variables:
+    n_cores: 2
+    OCP_src: OCP_src_${{ parameters.vmImage }}
+  steps:
+  - donwload: current
+    artifact: OCP_src_${{ parameters.vmImage }}
+    
+  - ${{ if contains(parameters.vmImage, 'Ubuntu') }}:
+    - bash: sudo apt-get install ${{ parameters.CXX }} mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
+      displayName: 'Install g++8 and gl headers'
 
+  - ${{ if contains(parameters.vmImage, 'mac') }}:
+    - bash: |
+        sudo find /Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/ && \
+        ln -s "$(xcrun --sdk macosx --show-sdk-path)/System/Library/Frameworks/OpenGL.framework/Headers" /usr/local/include/OpenGL
+      displayName: 'Search for GL'
+
+  - ${{ if contains(parameters.vmImage, 'win') }}:
+    - bash: ls "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build"
+      displayName: 'Find vcvars64'
+
+  - template: conda-enable.yml@templates
+    parameters:
+      vmImage: ${{ parameters.vmImage }}
+
+  - bash: |
+      conda env create -f ${{ parameters.conda_env_file }}
+    displayName: 'Prepare conda environment'
+
+  - bash: |
+      source activate cpp-py-bindgen && \
+      conda info -a && \
+      conda list && \
+      which python && \
+      env
+    displayName: 'Conda env sanity checks'
+    
+  - ${{ if contains(parameters.vmImage, 'mac') }}:
+    - bash: |
+        source activate cpp-py-bindgen && \
+        echo | clang -v -E -x c - && \
+        cd $CONDA_PREFIX && \
+        find . -name type_traits\* && \
+        sudo find /usr/local/ -name type_traits\*
+      displayName: 'Mac header check'
+  
   - ${{ if contains(parameters.vmImage, 'Ubuntu') }}:
     - bash: |
         source activate cpp-py-bindgen && \
-        cmake -B build -S "$(conf.OUTPUT)" -G Ninja -DCMAKE_BUILD_TYPE=Release && \
+        cmake -B build -S "$(OCP_src)" -G Ninja -DCMAKE_BUILD_TYPE=Release && \
         cmake --build build -j $(n_cores) -- -k 0 && \
         rm -rf build/CMakeFiles
       displayName: 'Compile'
@@ -101,7 +151,7 @@ jobs:
         source activate cpp-py-bindgen && \
         cp -rf opencascade $CONDA_PREFIX/include && \
         cat $CONDA_PREFIX/include/opencascade/OpenGl_HaltonSampler.hxx  &&\
-        cmake -B build -S "$(conf.OUTPUT)" -G Ninja -DCMAKE_BUILD_TYPE=Debug && \
+        cmake -B build -S "$(OCP_src)" -G Ninja -DCMAKE_BUILD_TYPE=Debug && \
         cmake --build build -j $(n_cores) -- -k 0 && \
         rm -rf build/CMakeFiles
       displayName: 'Compile'
@@ -112,7 +162,7 @@ jobs:
     - script: |
         call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
         call activate cpp-py-bindgen
-        cmake -B build -S "$(conf.OUTPUT)" -G Ninja -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -S "$(OCP_src)" -G Ninja -DCMAKE_BUILD_TYPE=Release
         cmake --build build -j $(n_cores) -- -k 0
         rmdir /S /Q build\CMakeFiles
       displayName: 'Compile'
