--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -133,7 +133,7 @@ jobs:
   - ${{ if contains(parameters.vmImage, 'Ubuntu') }}:
     - bash: |
         source activate cpp-py-bindgen && \
-        cmake -B build -S "$(OCP_src)" -G Ninja -DCMAKE_BUILD_TYPE=Release && \
+        cmake -B build -S "../$(OCP_src)" -G Ninja -DCMAKE_BUILD_TYPE=Release && \
         cmake --build build -j $(n_cores) -- -k 0 && \
         rm -rf build/CMakeFiles
       displayName: 'Compile'
@@ -145,7 +145,7 @@ jobs:
         source activate cpp-py-bindgen && \
         cp -rf opencascade $CONDA_PREFIX/include && \
         cat $CONDA_PREFIX/include/opencascade/OpenGl_HaltonSampler.hxx  &&\
-        cmake -B build -S "$(OCP_src)" -G Ninja -DCMAKE_BUILD_TYPE=Debug && \
+        cmake -B build -S "../$(OCP_src)" -G Ninja -DCMAKE_BUILD_TYPE=Debug && \
         cmake --build build -j $(n_cores) -- -k 0 && \
         rm -rf build/CMakeFiles
       displayName: 'Compile'
@@ -156,7 +156,7 @@ jobs:
     - script: |
         call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
         call activate cpp-py-bindgen
-        cmake -B build -S "$(OCP_src)" -G Ninja -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -S "../$(OCP_src)" -G Ninja -DCMAKE_BUILD_TYPE=Release
         cmake --build build -j $(n_cores) -- -k 0
         rmdir /S /Q build\CMakeFiles
       displayName: 'Compile'
