--- a/env.yml
+++ b/env.yml
@@ -1,11 +1,12 @@
 name: cpp-py-bindgen
 channels:
+  - cadquery
   - conda-forge
   - anaconda  
   - defaults
 dependencies:
   - clangdev=9.0.1
-  - occt=7.4.0
+  - cadquery::occt=7.4.0
   - pybind11=2.4.3
   - python=3.6
   - joblib
