--- a/ocp.toml
+++ b/ocp.toml
@@ -872,3 +872,7 @@ struct NSView {};"""
     [Modules.XCAFPrs]
     
         exclude_typedefs = ["XCAFPrs_DataMapOfStyleTransient"]
+        
+    [Modules.XCAFDoc]
+        
+        include_header_pre = "#undef GetObject"
