--- a/ocp.toml
+++ b/ocp.toml
@@ -880,3 +880,7 @@ struct NSView {};"""
 #include <windows.h>
 #endif
 """
+
+    [Modules.BOPAlgo]
+    
+        include_header_pre = "#include <BOPDS_Iterator.hxx>"
