Pin jinja to 2.11.3

--- a/env.yml
+++ b/env.yml
@@ -18,7 +18,7 @@ dependencies:
     - clang==6.0.0
     - click
     - cymbal
-    - jinja2
+    - jinja2==2.11.3
     - logzero
     - pandas
     - path.py
