--- a/env.yml
+++ b/env.yml
@@ -6,7 +6,7 @@ channels:
   - defaults
 dependencies:
   - clangdev=9.0.1
-  - cadquery::occt=7.4.0
+  - occt=7.4.0
   - pybind11=2.4.3
   - python=3.6
   - joblib
@@ -18,7 +18,7 @@ dependencies:
     - clang==6.0.0
     - click
     - cymbal
-    - jinja2
+    - jinja2==2.11.3
     - logzero
     - pandas
     - path.py
