--- a/env.yml
+++ b/env.yml
@@ -18,7 +18,7 @@ dependencies:
     - clang==6.0.0
     - click
     - cymbal
-    - jinja2==2.11.3
+    - jinja2>=2.11.3,<4
     - logzero
     - pandas
     - path.py
