--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -1,6 +1,6 @@
 parameters:
   name: 'Generate bindings'
-  vmImage: 'Ubuntu-16.04'
+  vmImage: 'ubuntu-latest'
   py_maj: '3'
   py_min: '6'
   config_file: 'ocp.toml'
