--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -1,6 +1,6 @@
 parameters:
   name: 'Generate bindings'
-  vmImage: 'Ubuntu-16.04'
+  vmImage: 'ubuntu-latest'
   py_maj: '3'
   py_min: '6'
   config_file: 'ocp.toml'
@@ -17,7 +17,7 @@ jobs:
     n_cores: 2
   steps:
   - ${{ if contains(parameters.vmImage, 'Ubuntu') }}:
-    - bash: sudo apt-get install ${{ parameters.CXX }} mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
+    - bash: sudo apt-get update && sudo apt-get install ${{ parameters.CXX }} mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
       displayName: 'Install g++8 and gl headers'
 
   - ${{ if contains(parameters.vmImage, 'mac') }}:
@@ -93,7 +93,7 @@ jobs:
     artifact: OCP_src_${{ parameters.vmImage }}
     
   - ${{ if contains(parameters.vmImage, 'Ubuntu') }}:
-    - bash: sudo apt-get install ${{ parameters.CXX }} mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
+    - bash: sudo apt-get update && sudo apt-get install ${{ parameters.CXX }} mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
       displayName: 'Install g++8 and gl headers'
 
   - ${{ if contains(parameters.vmImage, 'mac') }}:
