Do not specify g++ version explicitly

--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -6,7 +6,7 @@ parameters:
   config_file: 'ocp.toml'
   conda_bld: '3.16.3'
   conda_env_file: 'env.yml'
-  CXX: g++-8
+  CXX: g++
 
 jobs:
 - job: ${{ parameters.name }}
@@ -18,7 +18,7 @@ jobs:
   steps:
   - ${{ if contains(parameters.vmImage, 'Ubuntu') }}:
     - bash: sudo apt-get update && sudo apt-get install ${{ parameters.CXX }} mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
-      displayName: 'Install g++8 and gl headers'
+      displayName: 'Install g++ and gl headers'
 
   - ${{ if contains(parameters.vmImage, 'mac') }}:
     - bash: |
